examples/back-async-java/deployment/k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: my-namespace
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
        - name: backend
          image: my-registry/my-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: my-namespace
  labels:
    app: backend
spec:
  ports:
    - port: 80
      targetPort: 8080
  selector:
    app: backend
  type: ClusterIP
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: backend
  namespace: my-namespace
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: backend
        protocol: HTTP
      hosts:
        - my-backend.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend
  namespace: my-namespace
spec:
  gateways:
    - backend
  hosts:
    - my-backend.com
  http:
    - match:
        - uri:
            prefix: "/backend/"
      rewrite:
        uri: "/"
      route:
        - destination:
            host: backend
            port:
              number: 80
